<resources>
    <string name="app_name">Multi Tasking App</string>
    <string name="select_any_option">Select any Option</string>
    <string name="btn1">Show Hello World</string>
    <string name="btn2">Show KeyBoard Arrows</string>
    <string name="btn3">Show Button Events</string>
    <string name="btn4">Show Gestures</string>
    <string name="btn5">Show Both Button Events and Gestures</string>
    <string name="up">Up</string>
    <string name="left">Left</string>
    <string name="down">Down</string>
    <string name="right">Right</string>
    <string name="back">Back</string>
</resources>
