<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mk141.multitaskingapp.MainActivity"
    android:background="#6066df"
    android:focusableInTouchMode="false"
    android:focusable="false"
    android:id="@+id/relative_layout">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/gridLayout"
        android:visibility="visible"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            android:id="@+id/button"
            android:layout_row="0"
            android:layout_column="0"
            android:textColor="#000000"
            android:clickable="true"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            android:id="@+id/button2"
            android:layout_row="1"
            android:layout_column="0"
            android:textColor="#000000"
            android:clickable="true"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn3"
            android:id="@+id/button3"
            android:layout_row="2"
            android:layout_column="0"
            android:textColor="#000000"
            android:clickable="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn4"
            android:id="@+id/button4"
            android:layout_row="3"
            android:layout_column="0"
            android:textColor="#000000"
            android:clickable="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn5"
            android:id="@+id/button5"
            android:layout_row="4"
            android:layout_column="0"
            android:textColor="#000000"
            android:clickable="true" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/select_any_option"
        android:id="@+id/textView"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#000000"
        android:visibility="invisible"
        android:textColor="#FFFFFF" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:id="@+id/Grid_Arrow_Buttons"
        android:visibility="invisible">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/up"
            android:id="@+id/up"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/left"
            android:id="@+id/left"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowSpan="2"
            android:layout_gravity="fill_vertical" />

        <Button
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/right"
            android:id="@+id/right"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_rowSpan="2"
            android:layout_gravity="fill_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down"
            android:id="@+id/down"
            android:layout_row="1"
            android:layout_column="1" />
    </GridLayout>

</RelativeLayout>
